# UCell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  doc.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/ucell/: __init__.py  ucell.py
tests/: test_ucell.py
